--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,39 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  background-color: gainsboro;
+}
+
+.mainBox {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  height: 500px;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  font-family:Arial, Helvetica, sans-serif;
+  outline: 1px solid grey
+}
+
+.mainBox h4 {
+  position: relative;
+  left: 20%;
+  display: flex;
+  top: 5%;
+}
+
+.navbar-nav li{
+  margin: auto;
+  outline: 1px solid grey;
+  background-color: lightgray;
+  border-radius: 5px;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  max-height: 30px;
+  padding: 2px;
+  margin-top: 10%;
+}
